2007-02-10  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* sound-properties.glade: add a11y label relations for the devices
	tab (fixes bug #369302)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Gabor Kelemen <kelemeng@gnome.hu>

	* sound-properties-capplet.c: (setup_devices): Polypaudio is now
	PulseAudio (fixes bug #394003)

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* sound-properties-capplet.c: (setup_hal_devices), (setup_devices):
	ANSIfication of function declarations.

2007-01-14  Christian Persch  <chpe@svn.gnome.org>

	* sound-properties.glade: Fix label alignments bug (caused by glade-3
	bug 396433).

2007-01-14  Christian Persch  <chpe@svn.gnome.org>

	* sound-properties-capplet.c: (create_dialog): Show the sound
	properties view after adding it to the dialogue.

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* capplets/sound/Makefile.am:
	* capplets/sound/sound-properties-capplet.c: (create_dialog),
	(dialog_response_cb), (main):
	* capplets/sound/sound-properties.glade:
	Fix spacings and just build the whole dialogue from glade, not just
	the main part. Bug #394068.

2007-01-09  Jan Arne Petersen  <jpetersen@jpetersen.org>

	Fixes #394736

	* sound-properties-capplet.c: (update_mixer_tracks_selection),
	(update_mixer_device_combobox): added NULL-check.

2007-01-08  Jan Arne Petersen  <jpetersen@jpetersen.org>

	Fixes #173035

	* Makefile.am, mixer-support.c, mixer-support.h: Add new files.
	* sound-properties-capplet.c: (mixer_device_combobox_changed),
	(add_track_label_to_list), (mixer_tracks_selection_changed),
	(update_mixer_tracks_selection), (default_mixer_tracks_notify),
	(update_mixer_device_combobox), (default_mixer_device_notify),
	(setup_default_mixer), (setup_dialog):
	* sound-properties.glade: added support for selecting mixer device and
	tracks in the capplet.

2007-01-07  Thomas Wood  <thos@gnome.org>

	* sound-properties.glade: Use GtkAlignment for padding, rather than a